# web_server

./: .gitignore  Cargo.toml
auth_service/: Cargo.toml
auth_service/src/: main.rs
db-test/: Cargo.toml
db-test/src/: main.rs
encryption/: Cargo.toml
encryption/src/: api.rs  argon2_encrypt.rs  encrypt_factory.rs  encrypt_trait.rs  lib.rs
logger/: Cargo.toml
logger/src/: config.rs  lib.rs  log.rs
model-derive/: Cargo.toml
model-derive/src/: lib.rs
rust_bench/: Cargo.toml
rust_bench/src/: main.rs
talos_service/: .env  Cargo.toml
talos_service/src/: main.rs
talos_service/src/database/: dbutil.rs  userdb.rs
talos_service/src/entity/: mod.rs  sysuser.rs  user.rs
talos_service/src/logger/: mod.rs
talos_service/src/routes/: user_route.rs
talos_service/src/utils/: time_utils.rs
user_service/: .env  Cargo.toml
user_service/.cargo/: config.toml
user_service/src/: db.rs  main.rs
user_service/src/database/: dbutil.rs  mod.rs
user_service/src/entity/: mod.rs  user.rs  user_dto.rs
user_service/src/managers/: dbmanager.rs
user_service/src/route/: mod.rs  request_data.rs  user_route.rs
user_service/src/routes/: user_route.rs
user_service/src/user_entity/: entity.rs  mod.rs  schema.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/consul/: mod.rs
utils/src/database/: mod.rs
utils/src/jwt/: mod.rs
utils/src/time_util/: mod.rs
utils/src/times/: mod.rs
web_view/: package-lock.json  package.json
web_view/src/: App.vue
web_view/src/components/: Dashboard.vue  Home.vue  Login.vue  Sidebar.vue  UserManagement.vue
web_view/src/config/: api.ts  env.ts
web_view/src/router/: index.ts
web_view/src/services/: auth.ts  http.ts  user.ts
