[package]
name = "db-test"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
model-derive = { path = "../model-derive" }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "derive"] }
