[package]
name = "db-test"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
model-derive = { path = "../model-derive" }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "derive"] }
