[package]
name = "talos_service"
version = "0.1.0"
edition = "2024"

[dependencies]
flexi_logger = "0.31.2"
log = "0.4.27"
actix-web = "4.11.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.13.0", features = ["v4"] }
tokio = { version = "1.40.0", features = ["full"] }
chrono = { version = "0.4.30", features = ["serde"] }
dotenv = "0.15.0"
consul = "0.4.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono", "uuid"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }