[package]
name = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# flexi_logger = "0.31.2"
# log = "0.4.27"
logger = { path = "../logger" }
utils = { path = "../utils" }
model-derive = { path = "../model-derive" }

actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4"] }
tokio = { version = "1.48", features = ["full"] }
dotenv = "0.15"
consul = "0.4.2"
actix-cors = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono", "uuid"] }

chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }