[package]
name = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
logger = { path = "../logger" }
utils = { path = "../utils" }
encryption = { path = "../encryption" }

sea-orm = { version = "1.1", features = [
    "sqlx-mysql",
    "runtime-async-std-rustls",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
axum = { version = "0.8.7", features = ["default"] }
async-trait = "0.1"

dotenvy = "0.15"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
