[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono", "uuid"] }
indexmap = { version = "2.1.0", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }  